src/libbulletc/src/btWheelInfo_wrap.h


	EXPORT btWheelInfo* btWheelInfo_new(btWheelInfoConstructionInfo* ci);

	EXPORT bool btWheelInfo_getBIsFrontWheel(btWheelInfo* obj);

	EXPORT btScalar btWheelInfo_getBrake(btWheelInfo* obj);

	EXPORT void btWheelInfo_getChassisConnectionPointCS(btWheelInfo* obj, btScalar* value);

	EXPORT void* btWheelInfo_getClientInfo(btWheelInfo* obj);

	EXPORT btScalar btWheelInfo_getClippedInvContactDotSuspension(btWheelInfo* obj);

	EXPORT btScalar btWheelInfo_getDeltaRotation(btWheelInfo* obj);

	EXPORT btScalar btWheelInfo_getEngineForce(btWheelInfo* obj);

	EXPORT btScalar btWheelInfo_getFrictionSlip(btWheelInfo* obj);

	EXPORT btScalar btWheelInfo_getMaxSuspensionForce(btWheelInfo* obj);

	EXPORT btScalar btWheelInfo_getMaxSuspensionTravelCm(btWheelInfo* obj);

	EXPORT btWheelInfo_RaycastInfo* btWheelInfo_getRaycastInfo(btWheelInfo* obj);

	EXPORT btScalar btWheelInfo_getRollInfluence(btWheelInfo* obj);

	EXPORT btScalar btWheelInfo_getRotation(btWheelInfo* obj);

	EXPORT btScalar btWheelInfo_getSkidInfo(btWheelInfo* obj);

	EXPORT btScalar btWheelInfo_getSteering(btWheelInfo* obj);

	EXPORT btScalar btWheelInfo_getSuspensionRelativeVelocity(btWheelInfo* obj);

	EXPORT btScalar btWheelInfo_getSuspensionRestLength(btWheelInfo* obj);

	EXPORT btScalar btWheelInfo_getSuspensionRestLength1(btWheelInfo* obj);

	EXPORT btScalar btWheelInfo_getSuspensionStiffness(btWheelInfo* obj);

	EXPORT void btWheelInfo_getWheelAxleCS(btWheelInfo* obj, btScalar* value);

	EXPORT void btWheelInfo_getWheelDirectionCS(btWheelInfo* obj, btScalar* value);

	EXPORT btScalar btWheelInfo_getWheelsDampingCompression(btWheelInfo* obj);

	EXPORT btScalar btWheelInfo_getWheelsDampingRelaxation(btWheelInfo* obj);

	EXPORT btScalar btWheelInfo_getWheelsRadius(btWheelInfo* obj);

	EXPORT btScalar btWheelInfo_getWheelsSuspensionForce(btWheelInfo* obj);

	EXPORT void btWheelInfo_getWorldTransform(btWheelInfo* obj, btScalar* value);

	EXPORT void btWheelInfo_setBIsFrontWheel(btWheelInfo* obj, bool value);

	EXPORT void btWheelInfo_setBrake(btWheelInfo* obj, btScalar value);

	EXPORT void btWheelInfo_setChassisConnectionPointCS(btWheelInfo* obj, btScalar* value);

	EXPORT void btWheelInfo_setClientInfo(btWheelInfo* obj, void* value);

	EXPORT void btWheelInfo_setClippedInvContactDotSuspension(btWheelInfo* obj, btScalar value);

	EXPORT void btWheelInfo_setDeltaRotation(btWheelInfo* obj, btScalar value);

	EXPORT void btWheelInfo_setEngineForce(btWheelInfo* obj, btScalar value);

	EXPORT void btWheelInfo_setFrictionSlip(btWheelInfo* obj, btScalar value);

	EXPORT void btWheelInfo_setMaxSuspensionForce(btWheelInfo* obj, btScalar value);

	EXPORT void btWheelInfo_setMaxSuspensionTravelCm(btWheelInfo* obj, btScalar value);

	EXPORT void btWheelInfo_setRaycastInfo(btWheelInfo* obj, btWheelInfo_RaycastInfo* value);

	EXPORT void btWheelInfo_setRollInfluence(btWheelInfo* obj, btScalar value);

	EXPORT void btWheelInfo_setRotation(btWheelInfo* obj, btScalar value);

	EXPORT void btWheelInfo_setSkidInfo(btWheelInfo* obj, btScalar value);

	EXPORT void btWheelInfo_setSteering(btWheelInfo* obj, btScalar value);

	EXPORT void btWheelInfo_setSuspensionRelativeVelocity(btWheelInfo* obj, btScalar value);

	EXPORT void btWheelInfo_setSuspensionRestLength1(btWheelInfo* obj, btScalar value);

	EXPORT void btWheelInfo_setSuspensionStiffness(btWheelInfo* obj, btScalar value);

	EXPORT void btWheelInfo_setWheelAxleCS(btWheelInfo* obj, btScalar* value);

	EXPORT void btWheelInfo_setWheelDirectionCS(btWheelInfo* obj, btScalar* value);

	EXPORT void btWheelInfo_setWheelsDampingCompression(btWheelInfo* obj, btScalar value);

	EXPORT void btWheelInfo_setWheelsDampingRelaxation(btWheelInfo* obj, btScalar value);

	EXPORT void btWheelInfo_setWheelsRadius(btWheelInfo* obj, btScalar value);

	EXPORT void btWheelInfo_setWheelsSuspensionForce(btWheelInfo* obj, btScalar value);

	EXPORT void btWheelInfo_setWorldTransform(btWheelInfo* obj, btScalar* value);

	EXPORT void btWheelInfo_updateWheel(btWheelInfo* obj, btRigidBody* chassis, btWheelInfo_RaycastInfo* raycastInfo);

	EXPORT void btWheelInfo_delete(btWheelInfo* obj);